<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hãy chọn giá đúng</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- ANHDIEPMMK BEGIN -->
    
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_comma">.</string>
    <string name="key_c">C</string>
    
    <string name="version_info">Hãy chọn giá đúng\nVersion:1.0\nEmail:Gtotek135@gmail.com\nDev: GTOTek Team</string>
    
    
     <string name="id_admob">ca-app-pub-7725997656573645/3973268610</string>
    
    <!-- ANHDIEPMMK END -->
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <!-- TRIENVD BEGIN -->
	<string name="main_tab_info_sum">Sản phẩm</string>
	<string name="main_tab_info_details">Chi tiết</string>    
    
    <string name="dialog_input_ok">Đồng ý</string>
    <string name="dialog_input_cancel">Hủy</string>
    
    <string name="close">Chơi lại</string>
	<string name="victory">^TUYỆT VỜI^</string>    
    <string name="vic_info">Bạn là người tiêu dùng thông thái</string>
    
    
    <string name="menu_btn_start">Chơi ngay</string>
    
    <string name="chucmung">CHÍNH XÁC</string>
    <string name="tv_continues_title">Tiếp tục</string>
    
    <string name="slogan">Nothing is impossible</string>
    
    
    <string name="id_admob">212112</string>
    
    
    <!-- TRIENVD END -->

























	<!-- TRIEN BEGIN -->
		<string name="actionbar_tv_number">01</string>	
	<!-- TRIEN END -->
</resources>
