<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_vic"
    android:orientation="vertical" >

    <TextView
        style="@style/style_more_app_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/winscreen_tv_congratulation_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/congratulation_frame"
        android:gravity="center"
        android:text="@string/chucmung"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvName"
            style="@style/style_more_app_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Tên sản phẩm"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPrice"
            style="@style/style_more_app_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Giá"
            android:textSize="23sp"
            android:textStyle="bold" />
    </LinearLayout>
	
    <TextView
        android:id="@+id/tvContinue"
        style="@style/style_tv_continues"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/winscreen_tv_continues_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/winscreen_tv_continues_margin_bottom"
        android:layout_marginTop="@dimen/winscreen_tv_continues_margin_top"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:background="@drawable/list_item_selector"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:text="@string/tv_continues_title" />

</LinearLayout>