<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSubmit"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <!-- action bar -->

        <include layout="@layout/actionbar_main" />

        <!-- view product -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/main_view_product_height"
            android:layout_marginLeft="@dimen/main_view_product_margin_left_right"
            android:layout_marginRight="@dimen/main_view_product_margin_left_right"
            android:layout_marginTop="5dp"
            android:background="@drawable/view_round_corners"
            android:padding="@dimen/main_view_product_padding" >

            <ImageView
                android:id="@+id/imgProduct"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/white"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/main_view_product_margin_left_right"
            android:layout_marginRight="@dimen/main_view_product_margin_left_right"
            android:layout_marginTop="@dimen/main_view_product_margin_top"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvInfoSum"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/btn_sp_sum_pressed"
                android:gravity="center"
                android:tag="tab0"
                android:text="@string/main_tab_info_sum"
                android:textSize="@dimen/tv_size_20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInfoDetails"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/btn_sp_detail_normal"
                android:gravity="center"
                android:tag="tab1"
                android:text="@string/main_tab_info_details"
                android:textSize="@dimen/tv_size_20"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/main_view_product_margin_left_right"
            android:layout_marginRight="@dimen/main_view_product_margin_left_right"
            android:layout_marginTop="@dimen/main_view_product_margin_top"
            android:layout_weight="1" >

            <ScrollView
                android:id="@+id/scvInfoSum"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="visible" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="2dp"
                    android:paddingRight="1.5dp" >

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Tên sản phẩm"
                        android:textSize="@dimen/tv_size_23"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/black" />

                    <TextView
                        android:id="@+id/tvMadein"
                        style="@style/product_info"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/main_view_product_margin_top"
                        android:text="Xuất xứ" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/black" />

                    <TextView
                        android:id="@+id/tvVendor"
                        style="@style/product_info"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/main_view_product_margin_top"
                        android:text="Nhà cung cấp" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/black" />

                    <TextView
                        android:id="@+id/tvQuantity"
                        style="@style/product_info"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/main_view_product_margin_top"
                        android:text="Số lượng" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/black" />
                </LinearLayout>
            </ScrollView>

            <ScrollView
                android:id="@+id/scvInfoDetails"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/tvDesc"
                    style="@style/product_info"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Mô tả sản phẩm" />
            </ScrollView>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/search_bar_bg"
        android:gravity="center"
        android:text="Nhập giá"
        android:textSize="@dimen/tv_size_20"
        android:textStyle="bold" />

</RelativeLayout>